# jupyterlab-notifications

./: .gitignore  .prettierignore  .prettyignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
examples/: notify.ipynb
jupyter_notifications/: __init__.py  jupyter_notifications.py
jupyter_notifications/js/: notification.js  settings.js
jupyterlab-notifications/src/: index.ts
jupyterlab_notification/: __init__.py  jupyterlab_notification.py
jupyterlab_notification/js/: notification.js  settings.js
jupyterlab_notifications/: __init__.py
schema/: plugin.json
src/: index.ts  ntfy.ts  settings.ts
tutorial/: demo.ipynb  julia_demo.ipynb  notebook_notification_py3_demo.ipynb  py3_demo.ipynb  py3_demo_2.ipynb  py3_demo_3.ipynb
