[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "jupyter_notifications"
author = "Mariko Wakabayashi"
author-email = "mariko@mwkby.com"
home-page="https://github.com/mwakaba2/jupyter_notifications"
description-file="README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]
requires = [
    "setuptools",
    "ipython >=7.19",
]
requires-python=">=3.5"
